--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="scripts/requests/products.js" charset="utf-8"></script>
+    <script src="scripts/models/ClickListener.js" charset="utf-8"></script>
     <script src="scripts/models/Product.js" charset="utf-8"></script>
     <script src="scripts/models/ProductList.js" charset="utf-8"></script>
     <script src="scripts/models/Cart.js" charset="utf-8"></script>
